--- a/index.html
+++ b/index.html
@@ -1,63 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea Cozy</title>
-    <link rel="stylesheet" href="./styles/style.css">
+  <meta charset="UTF-8">
+  <title>The Tea Cozy</title>
+  <link rel="stylesheet" href="styles\style.css">
 </head>
-<header>
-    <img src="./image/img-tea-cozy-logo.png" alt="logo of website">
-    <nav>
-        <a href="#Mission">Mission</a>
-        <a href="#Tea">Tea</a>
-        <a href="#Location">Location</a>
-    </nav>
-</header>
 <body>
+  <header>
+    <img src="image\img-tea-cozy-logo.png" alt="Tea Cozy Logo" id="logo">
+    <nav>
+      <a href="#mission">Mission</a>
+      <a href="#featured">Featured Tea</a>
+      <a href="#locations">Locations</a>
+    </nav>
+  </header>
 
-    <section id="mission">
-        <div class="background-img">
-          <div class="mission-text">
-            <h2>Our Mission</h2>
-            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-          </div>
-        </div>
-    </section>
+  <section id="mission">
+    <div class="background-img">
+      <div class="mission-text">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+  </section>
 
-    <section id="Tea">
-        <h2>Tea of the mont</h2>
-        <h4>What's Steeping at The Tea Cozy</h4>
-    </section>
+  <section id="featured">
+    <h2>Tea of the Month</h2>
+    <h4>What’s Steeping at The Tea Cozy?</h4>
+    <div class="tea-container">
+      <div class="tea-item">
+        <img src="image\img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+        <p>Fall Berry Blitz Tea</p>
+      </div>
+      <div class="tea-item">
+        <img src="image\img-spiced-rum.jpg" alt="Spiced Rum Tea">
+        <p>Spiced Rum Tea</p>
+      </div>
+      <div class="tea-item">
+        <img src="image\img-donut.jpg" alt="Seasonal Donuts">
+        <p>Seasonal Donuts</p>
+      </div>
+      <div class="tea-item">
+        <img src="image\img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+        <p>Myrtle Ave Tea</p>
+      </div>
+      <div class="tea-item">
+        <img src="image\img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+        <p>Bedford Bizarre Tea</p>
+      </div>
+    </div>
+  </section>
 
-    <section id="Location">
-        <div class="background-img-2">
-            <h2>Location</h2>
-            <div>
-                <h3>Down Town</h3>
-                <p></p>
-                <p></p>
-                <p></p>
-            </div>
-            <div>
-                <h3>East Bayside</h3>
-                <p></p>
-                <p></p>
-                <p></p>
-            </div>
-            <div>
-                <h3>Oakdale</h3>
-                <p></p>
-                <p></p>
-                <p></p>
-            </div>
-        </div>
-    </section>
+  <section id="locations">
+    <h2>Locations</h2>
+    <div class="locations-container">
+      <div class="location">
+        <h3>Downtown</h3>
+        <p>384 West 4th St</p>
+        <p>Suite 108</p>
+        <p>Portland, Maine</p>
+      </div>
+      <div class="location">
+        <h3>East Bayside</h3>
+        <p>3433 Phisherman’s Avenue</p>
+        <p>(Northwest Corner)</p>
+        <p>Portland, Maine</p>
+      </div>
+      <div class="location">
+        <h3>Oakdale</h3>
+        <p>515 Crescent Avenue</p>
+        <p>Second Floor</p>
+        <p>Portland, Maine</p>
+      </div>
+    </div>
+  </section>
 
+  <footer>
+    <h2>The Tea Cozy</h2>
+    <h5>contact@theteacozy.com</h5>
+    <p>917-555-8904</p>
+    <p class="copyright">© The Tea Cozy 2024</p>
+  </footer>
 </body>
-<footer>
-    <h2>THE TEA COZY</h2>
-    <h5>Mail</h5>
-    <h5>Call</h5>
-</footer>
 </html>
